--- a/templates/book/book.css
+++ b/templates/book/book.css
@@ -132,7 +132,6 @@ body {
 
 .event_table {
   width: 100%;
-  display: table;
   border-collapse: collapse;
 }
 
@@ -143,18 +142,23 @@ body {
 
 .event {
   font-size: 14px;
-  display: table-row;
   border-bottom: solid white 2mm;
 }
 
-.event .hour {
-  border-left: 2px solid black;
+.event .hour_container {
   width: 18mm;
-  padding-left: 1mm;
-  display: table-cell;
   vertical-align: top;
-  float: left;
-  font-weight: 200;
+  font-weight: 100;
+  height: 100%;
+}
+
+.event .hour {
+  padding-left: 1mm;
+  border-left: 2px solid black;
+}
+
+.event .hour div {
+  
 }
 
 .event .duration {
@@ -171,14 +175,12 @@ body {
 
 .event .lecturer_and_title {
   vertical-align: top;
-  display: table-cell;
   width: 100%;
   font-weight: 300;
 }
 
 .event .lecturer_and_title_sponsored {
   vertical-align: top;
-  display: table-cell;
   width: 100%;
   font-weight: 300;
 }
