--- a/templates/schedule/schedule.css
+++ b/templates/schedule/schedule.css
@@ -22,20 +22,17 @@ body {
 }
 
 .event_table {
-  page-break-inside: avoid;
   width: 100%;
-  display: table;
   border-collapse: collapse;
 }
 
 .event_day .day_name {
   font-size: 50px;
-  margin: 10mm;
+  margin: 5mm;
 }
 
 .event {
   font-size: 26px;
-  display: table-row;
   border-bottom: solid white 4mm;
 }
 
@@ -43,7 +40,6 @@ body {
   border-left: 4px solid black;
   width: 30mm;
   padding-left: 2mm;
-  display: table-cell;
   vertical-align: top;
   float: left;
   font-weight: 300;
@@ -51,7 +47,6 @@ body {
 
 .event .lecturer_and_title {
   vertical-align: top;
-  display: table-cell;
   width: 100%;
   font-weight: 400;
 }
@@ -63,6 +58,6 @@ body {
 
 .plan {
   columns: 2;
-  column-gap: 20mm;
+  column-fill: auto;
+  column-gap: 15mm;
 }
-
