--- a/templates/book/book_template.html
+++ b/templates/book/book_template.html
@@ -52,22 +52,17 @@
         <table class="event_table">
           <tbody>
             {% for e in d.events %}
-            <tr class="event">
+            <tr
+              class="event{% if e.highlight != 'none' %} highlight_{{ e.highlight }}{% endif %}"
+            >
               <td class="hour_container">
                 <div class="hour">{{ e.startTime }} {{ e.endTime }}</div>
               </td>
-              <td
-                class="{% if e.sponsored %} lecturer_and_title_sponsored {% else %} lecturer_and_title {% endif %}"
-              >
-                <div class="title">
-                  {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-                  <u> {{ e.title }} </u>
-                  {% else %} {{ e.title }} {% endif %}
-                </div>
+              <td class="lecturer_and_title">
+                <div class="title">{{ e.title }}</div>
                 {% if e.lecturer %}
                 <em>
-                  {{ e.lecturer }} {% if e.coauthor %} i {{ e.coauthor }} {%
-                  endif %} {% if e.sponsored %} z firmy
+                  {{ e.lecturer }} {% if e.showOrganization %} z firmy
                   <b> {{ e.organization }} </b>
                   {% endif %}
                 </em>
@@ -84,24 +79,16 @@
       {% for d in days %}
       <div class="abstract_day">
         {% for e in d.events %} {% if e.type == "lecture" %}
-        <div class="abstract">
-          {% if e.sponsored %} {% if e.sponsored == "silver" or e.sponsored ==
-          "gold" %}
+        <div
+          class="abstract{% if e.highlight != 'none' %} highlight_{{ e.highlight }}{% endif %}"
+        >
           <div class="recommended">Wykład polecany</div>
-          {% endif %}
-          <div class="title_sponsored">
-            {% if e.sponsored == "silver" or e.sponsored == "gold" %}
-            <u> {{ e.title }} </u>
-            {% else %} {{ e.title }} {% endif %}
-          </div>
-          {% else %}
           <div class="title">{{ e.title }}</div>
-          {% endif %}
           <div>{{ d.session_name }} {{ e.startTime }} | {{ e.duration }}</div>
           <div class="lecturer">
             <em>
-              {{ e.lecturer }} {% if e.coauthor %} i {{ e.coauthor }} {% endif
-              %} {% if e.sponsored %} z firmy <b> {{ e.organization }} </b>
+              {{ e.lecturer }} {% if e.showOrganization %} z firmy
+              <b> {{ e.organization }} </b>
               {% endif %}
             </em>
           </div>
