--- a/templates/schedule/schedule.css
+++ b/templates/schedule/schedule.css
@@ -20,7 +20,7 @@ p {
   margin: 0
 }
 
-.event.gold_sponsor_highlight .lecturer_and_title {
+.event.highlight_gold .lecturer_and_title {
   background-color: #ffffff60;
   font-weight: 600;
 }
