--- a/templates/book/book_template.html
+++ b/templates/book/book_template.html
@@ -22,8 +22,8 @@
           <img class="conference_logo__image" src="../../assets/zosia.png" />
         </div>
         <div class="front_page__date_and_place">
-          {{ place.localization }} <br />
-          {{ camp_date }}
+          <div class="front_page__place">{{ place.localization }}</div>
+          <div class="front_page__date">{{ camp_date }}</div>
         </div>
         <div class="organizer_logos">
           <div class="organizer_logo">
